--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 :root {
   --debug: 1px solid red;
 
@@ -7,6 +8,9 @@
   --bg-col: hsl(257, 40%, 49%);
 }
 
+/* -------------
+General Styles
+---------------- */
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
   font-weight: 600;
@@ -25,94 +29,191 @@ i {
   box-sizing: border-box;
 }
 
-body {
-  height: 100vh;
-  margin: 0;
-  background: var(--bg-col);
-}
+/* ----------------
+Desktop Styles
+------------------- */
 
-.container {
-  background-image: url("assets/images/bg-desktop.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-}
+@media (min-width: 1440px) {
+  body {
+    height: 100vh;
+    margin: 0;
+    background: var(--bg-col);
 
-header {
-  padding: 2% 4%;
-}
-
-.content {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-evenly;
-}
-
-.content > * {
-  padding: 4% 4% 0;
-}
-
-.copy-text {
-  color: white;
-}
-
-.title {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
-  line-height: 3rem;
-}
-
-.description {
-  font-size: 1.4rem;
-  margin-bottom: 32px;
-}
-
-button {
-  color: var(--bg-col);
-  padding: 1.5%;
-  width: 200px;
-  font-size: large;
-  border-radius: 25px;
-  border: none;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
-}
-
-button:hover {
-  cursor: pointer;
-  background: hsl(300, 69%, 71%);
-  color: white;
-}
-
-footer {
-  padding: 32px 64px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-footer > * {
-  border: 1px solid white;
-  /* padding: 10px; */
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 10px;
-}
-
-footer div:hover{
-  cursor: pointer;
-  border: 1px solid hsl(300, 69%, 71%);
-}
-
-footer div:hover i {
-  color: hsl(300, 69%, 71%);
+  }
+  
+  .container {
+    background-image: url("assets/images/bg-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+  }
+  
+  header {
+    padding: 2% 4%;
+  }
+  
+  .content {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+  }
+  
+  .content > * {
+    padding: 4% 4% 0;
+  }
+  
+  .copy-text {
+    color: white;
+  }
+  
+  .title {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    line-height: 3rem;
+  }
+  
+  .description {
+    font-size: 1.4rem;
+    margin-bottom: 32px;
+  }
+  
+  button {
+    color: var(--bg-col);
+    padding: 1.5%;
+    width: 200px;
+    font-size: large;
+    border-radius: 25px;
+    border: none;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
+  }
+  
+  button:hover {
+    cursor: pointer;
+    background: hsl(300, 69%, 71%);
+    color: white;
+  }
+  
+  footer {
+    padding: 32px 64px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  
+  footer > * {
+    border: 1px solid white;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10px;
+  }
+  
+  footer div:hover{
+    cursor: pointer;
+    border: 1px solid hsl(300, 69%, 71%);
+  }
+  
+  footer div:hover i {
+    color: hsl(300, 69%, 71%);
+  }
 }
 
 /* -------------------------- */
 /* Mobile Styles  */
 /* -------------------------- */
 
+@media (max-width: 375px) {
+  body {
+    background: hsl(257, 40%, 49%);
+    margin: 0;
+    min-width: 375px;
+  }
+
+  .container {
+    background-image: url("assets/images/bg-mobile.svg");
+    background-repeat: no-repeat;
+  }
+
+  header {
+    padding: 15px;
+  }
+
+  .logo {
+    width: 35%;
+  }
+
+  .content {
+    padding: 15px;
+  }
+
+  .content .header img {
+    width: 100%;
+  }
+
+  .content > * {
+    margin: 50px 0;
+  }
+  
+  .copy-text {
+    text-align: center;
+    color: white;
+  }
+
+  .title {
+    font-size: 1.8rem;
+    line-height: 2.5rem;
+    margin-bottom: 0;
+  }
+
+  .description {
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+    margin-bottom: 25px;
+  }
+
+  button {
+    color: var(--bg-col);
+    padding: 1.5%;
+    width: 200px;
+    font-size: large;
+    border-radius: 25px;
+    border: none;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
+  }
+  
+  button:hover {
+    cursor: pointer;
+    background: hsl(300, 69%, 71%);
+    color: white;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    padding: 0 0 60px;
+  }
+
+  footer > * {
+    border: 1px solid white;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 5px;
+  }
+  
+  footer div:hover{
+    cursor: pointer;
+    border: 1px solid hsl(300, 69%, 71%);
+  }
+  
+  footer div:hover i {
+    color: hsl(300, 69%, 71%);
+  }
+}
