--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ i {
   .container {
     background-image: url('assets/images/bg-mobile.svg');
     background-repeat: no-repeat;
-    background-position: center;
+    /* background-position: center; */
     background-size: contain;
     padding: 5%;
     height: 100vh;
